[project]
name = "repo-audit"
version = "0.1.0"
description = "Multi-agent repository research & verification engine: Planner reads the repo map → parallel Workers gather evidence with local tools (tree/read/grep) → an independent Verifier re-checks each file:line citation → cited architecture docs and Q&A."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "fastmcp>=2.0",
    "langfuse>=4.0",  # T8：config.langfuse_handler 用 v3+ 的 langfuse.langchain.CallbackHandler，
    # 老版 2.x 没有这个导入路径（langfuse.callback 已在新版移除），下限必须提到 4.0
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
